--- a/app/src/main/res/layout/fragment_new_record.xml
+++ b/app/src/main/res/layout/fragment_new_record.xml
@@ -23,11 +23,14 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center|left"
-                android:layout_margin="24dp">
+                android:layout_margin="16dp">
                 <ImageView
                     android:onClick="@{viewModel.onBackButtonPressed}"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:paddingEnd="12dp"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp"
                     android:layout_marginEnd="16dp"
                     android:clickable="true"
                     android:focusable="true"
@@ -35,8 +38,9 @@
                     android:src="@drawable/baseline_arrow_back_24"/>
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:textSize="24sp"
+                    android:gravity="center"
                     android:text="@string/record"/>
             </LinearLayout>
 
