--- a/app/src/main/res/layout/fragment_view_record.xml
+++ b/app/src/main/res/layout/fragment_view_record.xml
@@ -25,15 +25,18 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center|start"
-                android:layout_margin="24dp">
+                android:layout_margin="16dp">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <ImageView
                         android:onClick="@{viewmodel.onBackButtonPressed}"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_width="56dp"
+                        android:layout_height="56dp"
+                        android:paddingEnd="12dp"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="12dp"
                         android:layout_marginEnd="16dp"
                         android:clickable="true"
                         android:focusable="true"
@@ -41,9 +44,10 @@
                         android:src="@drawable/baseline_arrow_back_24"/>
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:textSize="24sp"
-                        android:text="@string/record"/>
+                        android:text="@string/record"
+                        android:gravity="center"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -52,8 +56,9 @@
                     android:gravity="center|end">
                     <ImageView
                         android:onClick="@{viewmodel.onEditButtonPressed}"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_width="56dp"
+                        android:layout_height="56dp"
+                        android:padding="12dp"
                         android:layout_marginEnd="16dp"
                         android:clickable="true"
                         android:focusable="true"
@@ -61,8 +66,9 @@
                         android:src="@drawable/baseline_edit_24"/>
                     <ImageView
                         android:onClick="@{viewmodel.onDeleteButtonPressed}"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_width="56dp"
+                        android:layout_height="56dp"
+                        android:padding="12dp"
                         android:clickable="true"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
